2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘exit_diff_trouble’ static.

	* base.h (exit_diff_trouble): Delete func decl.
	* rcsutil.c (exit_diff_trouble): Make static.

2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Redo "exit errorfully" specialization/implementation.

	* rcsutil.c (thank_you_and_goodnight): New func.
	* base.h (struct program): Add member ‘tyag’; delete member ‘exiterr’.
	(thank_you_and_goodnight): New func decl.
	(TYAG_ORCSERROR, TYAG_DIRTMPUNLINK, TYAG_TEMPUNLINK, TYAG_DIFF)
	(TYAG_IMMEDIATE, BOG_DIFF, BOG_ZONK, BOG_FULL): New #define:s.
	(BOW_OUT): Rewrite.
	* ci.c (exiterr): Delete func.
	(ci_main): Update ‘program’ init form.
	* co.c (exiterr, co_main): Likewise.
	* ident.c (exiterr, main): Likewise.
	* merge.c (exiterr, main): Likewise.
	* rcs.c (exiterr, rcs_main): Likewise.
	* rcsclean.c (exiterr, rcsclean_main): Likewise.
	* rcsdiff.c (exiterr, rcsdiff_main): Likewise.
	* rcsmerge.c (exiterr, rcsmerge_main): Likewise.
	* rlog.c (exiterr, rlog_main): Likewise.
	* super.c (main): Update ‘program’ init form.

2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: BOW_OUT

	* base.h (BOW_OUT): New macro.
	* b-complain.c (die): Use ‘BOW_OUT’.
	* b-fb.c (Oerror): Likewise.
	* b-isr.c (werr, catchsigaction): Likewise.
	* ident.c (scanfile): Likewise.
	* merge.c (main): Likewise.
	* merger.c (merge): Likewise.

2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Expose ‘okalloc’ instead of ‘oom’.

	* rcsedit.c (okalloc): Move func from here...
	* b-divvy.c (oom): Make static.
	(okalloc): ...to here; make non-static.
	* b-divvy.h (oom): Delete func decl.
	(okalloc): Add func decl.

2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Init auto var ‘workptr’.

	Omission from 2011-10-13, "Remove
	‘workptr’ from global state of rcsclean(1)".

	* rcsclean.c (rcsclean_main): Init ‘workptr’.

2012-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Init auto var ‘neworkptr’.
