@@ -1,5 +1,11 @@
 2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Incorporate ‘exit_failurefully’ into unique caller.
+
+	* btdt.c (bad_args): Use ‘_Exit (EXIT_FAILURE)’ directly.
+
+2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Redo "exit errorfully" specialization/implementation.
 
 	* btdt.c (bow_out): Delete func.
